less: No more red bits

--- a/hotdoc/less/variables.less
+++ b/hotdoc/less/variables.less
@@ -829,8 +829,8 @@
 //
 //##
 
-@code-color:                  #c7254e;
-@code-bg:                     #f9f2f4;
+@code-color:                  @gray-dark;
+@code-bg:                     #f8f8f8;
 
 @kbd-color:                   #fff;
 @kbd-bg:                      #333;
