--- a/hotdoc/less/variables.less
+++ b/hotdoc/less/variables.less
@@ -829,14 +829,14 @@
 //
 //##
 
-@code-color:                  @gray-dark;
+@code-color:                  @text-color;
 @code-bg:                     #f8f8f8;
 
 @kbd-color:                   #fff;
 @kbd-bg:                      #333;
 
 @pre-bg:                      #f5f5f5;
-@pre-color:                   @gray-dark;
+@pre-color:                   @gray-darker;
 @pre-border-color:            #ccc;
 @pre-scrollable-max-height:   340px;
 
