Allow formatting symbols organised by a group of related fields
For example, in the case documenting objects/classes and when you
have several classes in the same page, it would make sense to have
all symbols related to it together in the output.

--- a/hotdoc/core/templates/alias.html
+++ b/hotdoc/core/templates/alias.html
@@ -2,9 +2,10 @@
 @extends('base_symbol.html')
 
 @def header():
-<h3>
+@(header_level = '4' if alias.extension_attributes['order_by_section'] else '3')
+<h@header_level>
 	@alias.link.title
-</h3>
+</h@header_level>
 @end
 @def content():
 <pre>
