--- a/hotdoc/core/templates/enum.html
+++ b/hotdoc/core/templates/enum.html
@@ -2,13 +2,14 @@
 @extends('base_symbol.html')
 
 @def header():
-<h3>
+@(header_level = '4' if enum.extension_attributes['order_by_section'] else '3')
+<h@header_level>
 	@if enum.anonymous:
 	@enum.link.title
 	@else:
 	enum @enum.link.title
 	@end
-</h3>
+</h@header_level>
 @end
 @def content():
 \
