--- a/hotdoc/core/templates/parameters.html
+++ b/hotdoc/core/templates/parameters.html
@@ -1,8 +1,9 @@
-@require(parameters)
+@require(parameters, symbol)
 
+@(param_header_level = '5' if symbol.extension_attributes['order_by_section'] else '4')
 @if parameters:
 	<div class="parameter_container">
-		<h4>Parameters</h4>
+		<h@param_header_level data-toc-skip=true>Parameters</h@param_header_level>
 		<table>
 			<tbody>
 				@for parameter in parameters:
