--- a/hotdoc/core/templates/property.html
+++ b/hotdoc/core/templates/property.html
@@ -2,9 +2,10 @@
 @extends('base_symbol.html')
 
 @def header():
-<h3 class="method">
+@(header_level = '4' if property.extension_attributes['order_by_section'] else '3')
+<h@header_level class="method">
 	<span><code>@property.link.title</code></span>
-</h3>
+</h@header_level>
 @end
 @def content():
 @prototype
