--- a/hotdoc/core/templates/struct.html
+++ b/hotdoc/core/templates/struct.html
@@ -2,13 +2,14 @@
 @extends('base_symbol.html')
 
 @def header():
-<h3>
+@(header_level = '4' if struct.extension_attributes['order_by_section'] else '3')
+<h@header_level>
 	@if struct.anonymous:
 	@struct.link.title
 	@else:
 	struct @struct.link.title
 	@end
-</h3>
+</h@header_level>
 @end
 @def content():
 \
