--- a/hotdoc/core/templates/base_page.html
+++ b/hotdoc/core/templates/base_page.html
@@ -1,4 +1,4 @@
-@require(page, meta, scripts, stylesheets, assets_path)
+@require(page, meta, scripts, stylesheets)
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,11 +12,11 @@
 <title>@page.get_title()</title>
 
 @for script in scripts:
-<script src="@assets_path/js/@script"></script>
+<script src="assets/js/@script"></script>
 @end
 
 @for stylesheet in stylesheets:
-<link rel="stylesheet" href="@assets_path/css/@stylesheet" type="text/css"/>
+<link rel="stylesheet" href="assets/css/@stylesheet" type="text/css"/>
 @end
 
 </head>
