--- a/hotdoc/core/templates/callable.html
+++ b/hotdoc/core/templates/callable.html
@@ -9,18 +9,8 @@
 @def content():
 @prototype
 @symbol.formatted_doc
-@if parameters:
-	<div class="parameter_container">
-		<h4>Parameters</h4>
-		<table>
-			<tbody>
-				@for parameter in parameters:
-					@parameter
-				@end
-			</tbody>
-		</table>
-	</div>
-@end
+
+@include("parameters.html")
 
 @if return_value:
 	@return_value
