templates: Fix default field_details implementation

--- a/hotdoc/core/templates/field_detail.html
+++ b/hotdoc/core/templates/field_detail.html
@@ -5,6 +5,6 @@
 		<i><em><code>@symbol.link.get_title():</code></em></i>
 		</p>
 	</td>
-	@end
 	<td>@detail</td>
+	<td>@symbol.formatted_link</td>
 </tr>
