callable: remove unused parameter

--- a/hotdoc/core/templates/callable.html
+++ b/hotdoc/core/templates/callable.html
@@ -1,4 +1,4 @@
-@require(prototype, symbol, return_value, parameters, callable_type, tags, extra)
+@require(prototype, symbol, return_value, parameters, tags, extra)
 @extends('base_symbol.html')
 
 @def header():
