--- a/hotdoc/core/templates/base_symbol.html
+++ b/hotdoc/core/templates/base_symbol.html
@@ -12,7 +12,7 @@ tags.pop('returns', None)
 @for tag in tags.values():
 @tag.name.lower():@tag.value;\
 @end
-" id="@symbol.link.id_-wpr">
+" id="@symbol.link.id_">
 	@def header():
 	@end
 	@header()
