Add extra attributes to links

--- a/hotdoc/core/templates/link.html
+++ b/hotdoc/core/templates/link.html
@@ -1,2 +1,2 @@
-@require(link, link_title)
-<a title="@link_title" href="@link">@link_title</a>\
+@require(link, attrs, link_title)
+<a title="@link_title" href="@link" @attrs>@link_title</a>\
