--- a/hotdoc/core/templates/simple_symbol.html
+++ b/hotdoc/core/templates/simple_symbol.html
@@ -1,2 +1,4 @@
 @require(symbol)
-<a id="@symbol.link.id_"></a>@symbol.link.title\
+<div data-hotdoc-id="@symbol.link.id_">
+	@symbol.link.title\
+</div>
