--- a/hotdoc/core/templates/callable_prototype.html
+++ b/hotdoc/core/templates/callable_prototype.html
@@ -6,7 +6,7 @@ if is_pointer:
 	param_offset += 3 * ' '
 )
 
-<pre class="prototype">
+<pre class="c-prototype">
 @if return_value:
 @return_value
 @end
