Change default theme

--- a/hotdoc/core/templates/base_symbol.html
+++ b/hotdoc/core/templates/base_symbol.html
@@ -15,7 +15,7 @@ else:
 
 @def header():
 <h@level data-hotdoc-id="@symbol.link.id_">
-	<span><code>@symbol.link.title</code></span>
+	<i>@symbol.link.title</i>
 </h@level>
 @end
 
@@ -24,3 +24,5 @@ else:
 @def content():
 @end
 @content()
+
+<hr>
