less: harmonize pre color with the prism theme

--- a/hotdoc/less/variables.less
+++ b/hotdoc/less/variables.less
@@ -835,8 +835,9 @@
 @kbd-color:                   #fff;
 @kbd-bg:                      #333;
 
-@pre-bg:                      #272822;
-@pre-color:                   #f8f8f2;
+// Harmonize with our prism theme
+@pre-bg:                      #2d2d2d;
+@pre-color:                   #ccc;
 @pre-border-color:            #ccc;
 @pre-scrollable-max-height:   340px;
 
